<resources>
    <string name="app_name">MDFolder</string>

    <string name="str_settings">Settings</string>
    <string name="str_image_browser">Image Browser</string>
    <string name="str_video_browser">Video Browser</string>
    <string name="str_audio_browser">Audio Browser</string>
    <string name="str_folder">Folder</string>
    <string name="str_album">Album</string>
    <string name="str_image">Image</string>
    <string name="str_file_info">File Info</string>
    <string name="str_zip_info">Zip Info</string>
    <string name="str_file_name">Name</string>
    <string name="str_file_remark">Remark</string>
    <string name="str_file_path">Path</string>
    <string name="str_file_size">Size</string>
    <string name="str_file_date">Date</string>
    <string name="str_file_type">Type</string>
    <string name="str_file_md5">MD5</string>
    <string name="intent_image_sort_type">SortType</string>
    <string name="intent_image_order_type">OrderType</string>
    <string name="intent_image_list">ImageList</string>
    <string name="intent_image_position">ImagePosition</string>
    <string name="intent_video_list">VideoList</string>
    <string name="intent_video_position">VideoPosition</string>
    <string name="intent_audio_list">AudioList</string>
    <string name="intent_audio_position">AudioPosition</string>
    <string name="intent_exit_position">ExitPosition</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="transition_image_name">Image transition</string>

    <string name="menu_other">Other</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_root">System</string>
    <string name="menu_inner_storage">Storage</string>
    <string name="menu_outer_storage">SDCard</string>
    <string name="menu_photo">Image</string>
    <string name="menu_music">Audio</string>
    <string name="menu_video">Video</string>
    <string name="menu_document">Document</string>
    <string name="menu_download">Download</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_move">Move</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_remark">Remark</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_apk">Apk</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_compress_package">Compress</string>
    <string name="menu_compress">Compress</string>
    <string name="menu_extract">Extract</string>
    <string name="menu_show_hide">Show/Hide</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_inverse_all">Reverse all</string>
    <string name="menu_sort_by_type">Sort by type</string>
    <string name="menu_sort_by_time">Sort by time</string>
    <string name="menu_sort_by_alphabet">Sort by alphabet</string>
    <string name="menu_sort_by_size">Sort by size</string>
    <string name="menu_sort_by_remark">Sort by remark</string>
    <string name="menu_sort_by_ascending">Ascending </string>

    <string name="act_exit">Exit</string>
    <string name="act_search">Search</string>
    <string name="act_cancel">Cancel</string>
    <string name="act_confirm">Confirm</string>
    <string name="act_delete">Delete</string>
    <string name="act_show_hide">Show/Hide</string>
    <string name="act_compress">Compress</string>
    <string name="act_extract">Extract</string>
    <string name="act_copy">Copy</string>
    <string name="act_move">Move</string>
    <string name="act_add_file">Add file</string>
    <string name="act_add_folder">Add folder</string>

    <string name="tips_alert">Tips</string>
    <string name="tips_compressing">Compressing&#8230;</string>
    <string name="tips_extracting">Extracting&#8230;</string>
    <string name="tips_loading">Loading&#8230;</string>
    <string name="tips_deleting">Deleting&#8230;</string>
    <string name="tips_handling">Handling&#8230;</string>
    <string name="tips_copying">Copying&#8230;</string>
    <string name="tips_moving">Moving&#8230;</string>
    <string name="tips_require_file_permissions">Require file permissions.</string>
    <string name="tips_no_permissions">App has no permissions, can not normally use.</string>
    <string name="tips_leave">Double click to leave.</string>
    <string name="tips_add_file">Please input file name.</string>
    <string name="tips_add_folder">Please input folder name.</string>
    <string name="tips_delete_files">Delete these files?</string>
    <string name="tips_delete_file">Delete file?</string>
    <string name="tips_show_hide_files">Show/Hide these files?</string>
    <string name="tips_compress_files">Compress these files?</string>
    <string name="tips_extract_file">Extract file?</string>
    <string name="tips_copy_files">Copy these files?</string>
    <string name="tips_move_files">Move these files?</string>
    <string name="tips_delete_successfully">Delete successfully.</string>
    <string name="tips_delete_in_error">Delete in error.</string>
    <string name="tips_show_hide_successfully">Show/Hide successfully.</string>
    <string name="tips_show_hide_in_error">Show/Hide in error.</string>
    <string name="tips_remark_successfully">Remark successfully.</string>
    <string name="tips_rename_successfully">Rename successfully.</string>
    <string name="tips_rename_in_error">Rename in error.</string>
    <string name="tips_compress_successfully">Compress successfully.</string>
    <string name="tips_compress_in_error">Compress in error.</string>
    <string name="tips_extract_successfully">Extract successfully.</string>
    <string name="tips_extract_in_error">Extract in error.</string>
    <string name="tips_copy_successfully">Copy successfully.</string>
    <string name="tips_copy_in_error">Copy in error.</string>
    <string name="tips_move_successfully">Move successfully.</string>
    <string name="tips_move_in_error">Move in error.</string>
    <string name="tips_file_exist">File is exist.</string>
    <string name="tips_folder_exist">Folder is exist.</string>
    <string name="tips_add_file_error">Add file error.</string>
    <string name="tips_add_folder_error">Add folder error.</string>
    <string name="tips_add_file_successfully">Add file successfully.</string>
    <string name="tips_add_folder_successfully">Add folder successfully.</string>
    <string name="tips_can_not_access_file">Can not execute file.</string>
    <string name="tips_no_file">Empty.</string>
    <string name="tips_not_complete">This function is not complete.</string>
    <string name="tips_error">Error.</string>
    <string name="tips_choose_one_file">Please choose one file.</string>
    <string name="tips_selected">%d&#160;Selected.</string>
    <string name="tips_input_file_name">Please input filename.</string>
    <string name="tips_input_file_remark">Please input file remark.</string>
    <string name="tips_input_size">Please input size.(Larger than xxx kb)</string>
    <string name="tips_file_name_empty">Filename cannot be empty.</string>
    <string name="tips_copy_to_clipboard">&#160;is copied to clipboard.</string>
    <string name="tips_not_support">Not Support to play.</string>
    <string name="tips_input_password">Please input password.</string>
    <string name="tips_cannot_access_sdcard">Cannot write sdcard.</string>
    <string name="tips_select_sdcard">Please select sdcard root path in the next windows.</string>
    <string name="tips_share_by_MDFolder">Share by MDFolder.</string>
    <string name="tips_cannot_share">Can not share this file.</string>
    <string name="tips_calculating">Calculating file count&#8230;</string>
    <string name="tips_scanning">Scanning&#8230;</string>
    <string name="tips_scan_complete">Scan complete.</string>
    <string name="tips_save_bookmark">Save current path as bookmark?</string>
    <string name="tips_save_bookmark_already">Bookmark has already saved.</string>
    <string name="tips_save_bookmark_successfully">Bookmark save successfully.</string>
    <string name="tips_save_bookmark_in_error">Bookmark save in error.</string>
    <string name="tips_delete_bookmark">Delete %s bookmark?</string>
    <string name="tips_delete_bookmark_successfully">Bookmark delete successfully.</string>
    <string name="tips_delete_bookmark_in_error">Bookmark delete in error.</string>
    <string name="tips_no_root_permission">Not root yet.</string>

    <string name="pref_settings">Settings</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_configuration">Configuration</string>
    <string name="pref_function">Function</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_dark">Dark Theme</string>
    <string name="pref_light">Light Theme</string>
    <string name="pref_if_show_hidden">Show hidden files</string>
    <string name="pref_show_hidden">Show</string>
    <string name="pref_hide_hidden">Hide</string>
    <string name="pref_about">About</string>
    <string name="pref_project">Project</string>
    <string name="pref_github">https://github.com/huangyu0522/MDFolder</string>
    <string name="pref_language">Language</string>
    <string name="pref_build_in_mode">Use build-in mode</string>
    <string name="pref_external_mode">Use external apps</string>
    <string name="pref_open_mode">Image/Audio/Video open mode</string>
    <string name="pref_not_show_system">Not show system apps</string>
    <string name="pref_show_all">Show all apps</string>
    <string name="pref_show_apps_mode">Show apps mode</string>
    <string name="pref_search_global">Search Globally</string>
    <string name="pref_search_single">Search in single file</string>
    <string name="pref_search_mode">File Search mode</string>
    <string name="pref_scan">Scan Globally</string>
    <string name="pref_scan_summary">Scan added file from other apps.</string>

    <string-array name="array_languages">
        <item>Simplified chinese</item>
        <item>English</item>
    </string-array>

    <string-array name="array_languages_value">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="array_themes">
        <item>Blue</item>
        <item>Dark</item>
        <item>Indigo</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Black</item>
    </string-array>

    <string-array name="array_themes_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

</resources>
