<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_appearance">

        <ListPreference
            android:entries="@array/array_themes"
            android:entryValues="@array/array_themes_value"
            android:key="pref_themes"
            android:title="@string/pref_theme" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_configuration">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_show_hidden"
            android:title="@string/pref_if_show_hidden" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_open_mode"
            android:title="@string/pref_open_mode" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_search_mode"
            android:title="@string/pref_search_mode" />

        <Preference
            android:capitalize="words"
            android:inputType="none"
            android:key="pref_scan"
            android:maxLines="1"
            android:singleLine="true"
            android:summary="@string/pref_scan_summary"
            android:title="@string/pref_scan" />

        <ListPreference
            android:entries="@array/array_languages"
            android:entryValues="@array/array_languages_value"
            android:key="pref_language"
            android:title="@string/pref_language" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about">

        <Preference
            android:capitalize="words"
            android:inputType="none"
            android:key="pref_about"
            android:maxLines="1"
            android:singleLine="true"
            android:summary="@string/pref_github"
            android:title="@string/pref_project" />

    </PreferenceCategory>

</PreferenceScreen>
