<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_menu_photo"
            android:title="@string/menu_photo" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_menu_apps"
            android:title="@string/menu_apps" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
    </group>

</menu>
