<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_folder"
        android:orderInCategory="0">
        <item
            android:id="@+id/nav_inner_storage"
            android:checked="true"
            android:icon="@mipmap/ic_storage"
            android:orderInCategory="1"
            android:title="@string/menu_inner_storage" />
        <item
            android:id="@+id/nav_root"
            android:icon="@mipmap/ic_root"
            android:orderInCategory="3"
            android:title="@string/menu_root" />

        <item
            android:id="@+id/nav_recent"
            android:icon="@mipmap/ic_recent"
            android:orderInCategory="4"
            android:title="@string/menu_recent" />

        <item
            android:id="@+id/nav_download"
            android:icon="@mipmap/ic_download"
            android:orderInCategory="5"
            android:title="@string/menu_download" />

        <item
            android:id="@+id/nav_photo"
            android:icon="@mipmap/ic_photo"
            android:orderInCategory="6"
            android:title="@string/menu_image" />
        <item
            android:id="@+id/nav_music"
            android:icon="@mipmap/ic_music"
            android:orderInCategory="7"
            android:title="@string/menu_audio" />
        <item
            android:id="@+id/nav_video"
            android:icon="@mipmap/ic_video"
            android:orderInCategory="8"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_document"
            android:icon="@mipmap/ic_document"
            android:orderInCategory="9"
            android:title="@string/menu_document" />
        <item
            android:id="@+id/nav_apk"
            android:icon="@mipmap/ic_apk"
            android:orderInCategory="10"
            android:title="@string/menu_apk" />

        <item
            android:id="@+id/nav_zip"
            android:icon="@mipmap/ic_zip"
            android:orderInCategory="11"
            android:title="@string/menu_compress_package" />

        <item
            android:id="@+id/nav_apps"
            android:icon="@mipmap/ic_apps"
            android:orderInCategory="12"
            android:title="@string/menu_apps" />
    </group>

    <group
        android:id="@+id/nav_group_other"
        android:orderInCategory="20">
        <item android:title="@string/menu_other">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@mipmap/ic_settings"
                    android:orderInCategory="21"
                    android:title="@string/menu_settings" />
            </menu>
        </item>
    </group>

</menu>
