<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@mipmap/ic_info"
        android:orderInCategory="1"
        android:title="@string/menu_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_delete"
        android:orderInCategory="2"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy"
        android:icon="@mipmap/ic_copy"
        android:orderInCategory="3"
        android:title="@string/menu_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_move"
        android:icon="@mipmap/ic_move"
        android:orderInCategory="4"
        android:title="@string/menu_move"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_compress"
        android:orderInCategory="5"
        android:title="@string/menu_compress"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_extract"
        android:orderInCategory="6"
        android:title="@string/menu_extract"
        app:showAsAction="ifRoom" />

</menu>