<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@mipmap/ic_info"
        android:orderInCategory="1"
        android:title="@string/menu_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_delete"
        android:orderInCategory="2"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remark"
        android:orderInCategory="3"
        android:title="@string/menu_remark"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="4"
        android:title="@string/menu_select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_inverse_all"
        android:orderInCategory="5"
        android:title="@string/menu_inverse_all"
        app:showAsAction="ifRoom" />

</menu>