<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:orderInCategory="1"
        android:title="@string/act_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_sort_by_type"
            android:checked="true"
            android:orderInCategory="2"
            android:title="@string/menu_sort_by_type"
            app:showAsAction="withText" />

        <item
            android:id="@+id/action_sort_by_alphabet"
            android:orderInCategory="3"
            android:title="@string/menu_sort_by_alphabet"
            app:showAsAction="withText" />

        <item
            android:id="@+id/action_sort_by_time"
            android:orderInCategory="4"
            android:title="@string/menu_sort_by_time"
            app:showAsAction="withText" />

        <item
            android:id="@+id/action_sort_by_size"
            android:orderInCategory="5"
            android:title="@string/menu_sort_by_size"
            app:showAsAction="withText" />
    </group>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_sort_ascending"
            android:checked="true"
            android:orderInCategory="5"
            android:title="@string/menu_sort_by_ascending"
            app:showAsAction="withText" />
    </group>

</menu>
